--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Syntax</title>
+    <title>Synix</title>
     <meta name="author" content="M-tech-cmd" />
     <meta property="og:title" content="syntax" />
     <meta property="og:type" content="website" />
